# LiveCaptions-Translator

./: .gitignore  AGENTS.md  LiveCaptionsTranslator.csproj
Properties/: InternalsVisibleTo.cs
docs/: ARCHITECTURE.md  CURRENT_STATUS.md  IPC_PROTOCOL.md  TESTING.md  THIRD_PARTY_NOTICES.md
native/AsrWorker/: CMakeLists.txt  CMakePresets.json
native/AsrWorker/include/: protocol.hpp  recognition.hpp  recognition_adapters.hpp
native/AsrWorker/src/: main.cpp  protocol.cpp  recognition.cpp  silero_onnx.cpp  whisper_cpp.cpp
native/AsrWorker/tests/: protocol_tests.cpp  recognition_tests.cpp
protocol/v1/test-vectors/: protocol-v1.hex
src/: App.xaml.cs  Translator.cs
src/audio/: AudioCaptureService.cs  AudioContracts.cs
src/audio/buffering/: BoundedAudioFrameBuffer.cs  FramePublicationDispatcher.cs
src/audio/diagnostics/: AudioProbeSupport.cs
src/audio/processing/: AudioFrameAssembler.cs  Pcm16Encoder.cs  StreamingAudioNormalizer.cs
src/audio/windows/: WasapiLoopbackCaptureRuntime.cs  WindowsAudioEndpointProvider.cs
src/captioning/: CaptionEvent.cs  CaptionEventGate.cs  CaptionEventKind.cs  CaptionSnapshotProcessor.cs  CaptionSourceHost.cs  CaptionSourceStartResult.cs  CaptionSourceState.cs  CaptionSourceStatus.cs  CaptionTranslationRequest.cs  ICaptionSource.cs
src/captioning/windows/: INativeCaptionWindowControl.cs  LiveCaptionsRuntime.cs  LiveCaptionsRuntimeContracts.cs  WindowsLiveCaptionsSource.cs
src/ipc/: IpcProtocol.cs  NamedPipeWorkerTransport.cs  PipeIo.cs  ProtocolMessages.cs
src/lifecycle/: ApplicationShutdownCoordinator.cs
src/models/: Setting.cs
src/pages/: SettingPage.xaml  SettingPage.xaml.cs
src/utils/: LiveCaptionsHandler.cs
src/windows/: MainWindow.xaml.cs
src/worker/: AsrWorkerSupervisor.cs  AudioFramePump.cs  AudioWorkerPipeline.cs  WorkerContracts.cs  WorkerProcess.cs  WorkerRecognitionConfiguration.cs
tests/LiveCaptionsTranslator.Tests/: ApplicationShutdownCoordinatorTests.cs  AsrWorkerProbeAcceptanceTests.cs  AsrWorkerProbeOptionsTests.cs  AsrWorkerSupervisorTests.cs  AudioCaptureDisposalTests.cs  AudioCaptureServiceTests.cs  AudioEndpointTests.cs  AudioFrameAssemblerTests.cs  AudioFramePublicationTests.cs  AudioFramePumpTests.cs  AudioProbeSupportTests.cs  AudioSettingTests.cs  AudioTestDoubles.cs  AudioWorkerPipelineTests.cs  BoundedAudioFrameBufferTests.cs  CaptionEventFactory.cs  CaptionEventGateTests.cs  CaptionEventTests.cs  CaptionSnapshotProcessorTests.cs  CaptionSourceHostTests.cs  CaptionSourceTestDoubles.cs  CaptionTranslationRequestTests.cs  DedicatedThreadAudioCaptureRuntime.cs  IpcProtocolTests.cs  LiveCaptionsTranslator.Tests.csproj  NamedPipeWorkerTransportTests.cs  Pcm16EncoderTests.cs  Stage5ProbeAndConfigurationTests.cs  StreamingAudioNormalizerTests.cs  WasapiCleanupTests.cs  WindowsLiveCaptionsSourceTests.cs
tools/AsrWorkerProbe/: AsrWorkerProbe.csproj  ProbeAcceptance.cs  ProbeOptions.cs  Program.cs  WaveFixture.cs
tools/AudioCaptureProbe/: AudioCaptureProbe.csproj  Program.cs
