cmake_minimum_required(VERSION 3.25)
project(LiveCaptionsAsrWorker VERSION 1.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
foreach(config Debug Release RelWithDebInfo MinSizeRel)
  string(TOUPPER "${config}" upper)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${upper} "${CMAKE_BINARY_DIR}/bin")
endforeach()
add_library(asr_protocol STATIC src/protocol.cpp)
target_include_directories(asr_protocol PUBLIC include)
target_compile_definitions(asr_protocol PUBLIC UNICODE _UNICODE WIN32_LEAN_AND_MEAN NOMINMAX)
target_compile_options(asr_protocol PRIVATE /W4 /WX)
add_executable(LiveCaptionsAsrWorker src/main.cpp)
target_link_libraries(LiveCaptionsAsrWorker PRIVATE asr_protocol)
target_compile_options(LiveCaptionsAsrWorker PRIVATE /W4 /WX)
enable_testing()
add_executable(AsrWorkerNativeTests tests/protocol_tests.cpp)
target_link_libraries(AsrWorkerNativeTests PRIVATE asr_protocol)
target_compile_options(AsrWorkerNativeTests PRIVATE /W4 /WX)
target_compile_definitions(AsrWorkerNativeTests PRIVATE GOLDEN_VECTOR_PATH=L"${CMAKE_SOURCE_DIR}/../../protocol/v1/test-vectors/protocol-v1.hex")
add_test(NAME AsrWorkerNativeProtocolTests COMMAND AsrWorkerNativeTests)
