cmake_minimum_required(VERSION 3.25)
project(LiveCaptionsAsrWorker VERSION 1.0.0 LANGUAGES CXX)
option(LCT_ENABLE_RECOGNITION "Build CPU Silero VAD and whisper.cpp recognition support" OFF)
set(LCT_WHISPER_SOURCE_DIR "" CACHE PATH "Pinned whisper.cpp v1.8.6 source directory")
set(LCT_ONNXRUNTIME_DIR "" CACHE PATH "ONNX Runtime 1.23.0 Windows x64 CPU distribution root")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
foreach(config Debug Release RelWithDebInfo MinSizeRel)
  string(TOUPPER "${config}" upper)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${upper} "${CMAKE_BINARY_DIR}/bin")
endforeach()
add_library(asr_protocol STATIC src/protocol.cpp)
target_include_directories(asr_protocol PUBLIC include)
target_compile_definitions(asr_protocol PUBLIC UNICODE _UNICODE WIN32_LEAN_AND_MEAN NOMINMAX)
target_compile_options(asr_protocol PRIVATE /W4 /WX)
add_library(asr_recognition_core STATIC src/recognition.cpp)
target_include_directories(asr_recognition_core PUBLIC include)
target_link_libraries(asr_recognition_core PUBLIC asr_protocol)
target_compile_options(asr_recognition_core PRIVATE /W4 /WX)
add_executable(LiveCaptionsAsrWorker src/main.cpp)
target_link_libraries(LiveCaptionsAsrWorker PRIVATE asr_protocol)
target_compile_options(LiveCaptionsAsrWorker PRIVATE /W4 /WX)
if(LCT_ENABLE_RECOGNITION)
  if(NOT EXISTS "${LCT_ONNXRUNTIME_DIR}/include/onnxruntime_cxx_api.h" OR
     NOT EXISTS "${LCT_ONNXRUNTIME_DIR}/lib/onnxruntime.lib" OR
     NOT EXISTS "${LCT_ONNXRUNTIME_DIR}/lib/onnxruntime.dll")
    message(FATAL_ERROR "LCT_ONNXRUNTIME_DIR must point to the official ONNX Runtime 1.23.0 Windows x64 CPU distribution")
  endif()
  set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
  set(WHISPER_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
  set(WHISPER_BUILD_TESTS OFF CACHE BOOL "" FORCE)
  set(WHISPER_BUILD_SERVER OFF CACHE BOOL "" FORCE)
  set(WHISPER_BUILD_BENCHMARKS OFF CACHE BOOL "" FORCE)
  set(GGML_NATIVE OFF CACHE BOOL "" FORCE)
  set(GGML_CUDA OFF CACHE BOOL "" FORCE)
  set(GGML_SSE42 OFF CACHE BOOL "" FORCE)
  set(GGML_AVX OFF CACHE BOOL "" FORCE)
  set(GGML_AVX2 OFF CACHE BOOL "" FORCE)
  set(GGML_AVX_VNNI OFF CACHE BOOL "" FORCE)
  set(GGML_AVX512 OFF CACHE BOOL "" FORCE)
  set(GGML_BMI2 OFF CACHE BOOL "" FORCE)
  set(GGML_FMA OFF CACHE BOOL "" FORCE)
  set(GGML_F16C OFF CACHE BOOL "" FORCE)
  if(NOT LCT_WHISPER_SOURCE_DIR)
    include(FetchContent)
    FetchContent_Declare(whisper_cpp GIT_REPOSITORY https://github.com/ggml-org/whisper.cpp.git GIT_TAG 23ee03506a91ac3d3f0071b40e66a430eebdfa1d GIT_SHALLOW FALSE)
    FetchContent_MakeAvailable(whisper_cpp)
  elseif(EXISTS "${LCT_WHISPER_SOURCE_DIR}/CMakeLists.txt")
    add_subdirectory("${LCT_WHISPER_SOURCE_DIR}" "${CMAKE_BINARY_DIR}/third_party/whisper" EXCLUDE_FROM_ALL)
  else()
    message(FATAL_ERROR "LCT_WHISPER_SOURCE_DIR must point to the pinned whisper.cpp v1.8.6 checkout")
  endif()
  add_library(asr_recognition_adapters STATIC src/silero_onnx.cpp src/whisper_cpp.cpp)
  target_include_directories(asr_recognition_adapters PRIVATE include "${LCT_ONNXRUNTIME_DIR}/include")
  target_link_libraries(asr_recognition_adapters PRIVATE asr_recognition_core whisper "${LCT_ONNXRUNTIME_DIR}/lib/onnxruntime.lib")
  target_compile_options(asr_recognition_adapters PRIVATE /W4 /WX)
  target_compile_definitions(LiveCaptionsAsrWorker PRIVATE LCT_ENABLE_RECOGNITION)
  target_link_libraries(LiveCaptionsAsrWorker PRIVATE asr_recognition_core asr_recognition_adapters)
  add_custom_command(TARGET LiveCaptionsAsrWorker POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_if_different "${LCT_ONNXRUNTIME_DIR}/lib/onnxruntime.dll" "$<TARGET_FILE_DIR:LiveCaptionsAsrWorker>")
endif()
enable_testing()
add_executable(AsrWorkerNativeTests tests/protocol_tests.cpp)
target_link_libraries(AsrWorkerNativeTests PRIVATE asr_protocol)
target_compile_options(AsrWorkerNativeTests PRIVATE /W4 /WX)
target_compile_definitions(AsrWorkerNativeTests PRIVATE GOLDEN_VECTOR_PATH=L"${CMAKE_SOURCE_DIR}/../../protocol/v1/test-vectors/protocol-v1.hex")
add_test(NAME AsrWorkerNativeProtocolTests COMMAND AsrWorkerNativeTests)
add_executable(AsrWorkerRecognitionTests tests/recognition_tests.cpp)
target_link_libraries(AsrWorkerRecognitionTests PRIVATE asr_recognition_core)
target_compile_options(AsrWorkerRecognitionTests PRIVATE /W4 /WX)
add_test(NAME AsrWorkerNativeRecognitionTests COMMAND AsrWorkerRecognitionTests)
